# Abuynits.github.io

./: build.sh  package-lock.json  pyproject.toml
.github/workflows/: build.yml
docs/: index.html
docs/projects/: 558.html  airq.html  b1.html  frc_ftc.html  image_processing.html  wave.html
posts/projects/: 558.md  airq.md  b1.md  edge_probing.md  frc_ftc.md  image_processing.md  interviewer.md  wave.md
posts/publications/: domain_decomposition_iros.md  edge_camera_iccar.md  faster_bc_roboarch.md  self_supervised_nav_iros.md  taco.md
src/: build.py  index.css  optimize-images.sh
src/data/: random_quotes.md
src/gpu_history/: plot.py
src/templates/: index.html  layout.html
src/templates/posts/publications/: list.html  page.html
src/templates/random/: favorite_books.html  favorite_hikes.html  favorite_mtb.html  happiness.html
